--- a/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.html
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.html
@@ -52,7 +52,13 @@
 						/>
 
 						<mat-label><img src="assets/images/arrow_circle_up-24px.svg" />Cargar usuarios</mat-label>
-						<input matInput formControlName="file" class="disabled__input" placeholder="Cargar usuarios" required />
+						<input
+							matInput
+							formControlName="excelFile"
+							class="disabled__input"
+							placeholder="Cargar usuarios"
+							required
+						/>
 					</mat-form-field>
 					<br />
 					<mat-dialog-actions>
