--- a/src/app/features/modal-alta-usuario/modal-alta-usuario.component.sass
+++ b/src/app/features/modal-alta-usuario/modal-alta-usuario.component.sass
@@ -17,7 +17,7 @@
 .btn_close
     cursor: pointer
 .tabActivate
-    mat-icon
+    .mat-icon
         color: $primary
 .tabActivate
     color: $primary
@@ -32,4 +32,4 @@
     display: none
     position: absolute
     top: 6px
-    right: 16px     
+    right: 16px
