--- a/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
+++ b/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
@@ -13,9 +13,9 @@
 			</ng-container>
 
 			<!-- Type Column -->
-			<ng-container matColumnDef="userName">
+			<ng-container matColumnDef="username">
 				<th mat-header-cell *matHeaderCellDef>Nombre</th>
-				<td mat-cell *matCellDef="let element">{{ element.userName }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.username }}</td>
 			</ng-container>
 
 			<!-- Concept Column -->
