--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -19,13 +19,13 @@
   &:hover
     color: $primary
     background-color: rgba($primary, .5 )
-    mat-icon
-    color: $primary
+    .mat-icon
+      color: $primary
   &.active
     color: $primary
     border-left: 5px solid $primary
-    mat-icon
-    color: $primary
+    .mat-icon
+      color: $primary
 .disabled
   color: $light-gray
   cursor: not-allowed
@@ -34,9 +34,7 @@
   font-weight: 500
   letter-spacing: 0.8px
   font-size: .9rem
-mat-icon
+.material-icons-outlined
   margin-right: 20px
-  color: $grey
-
 .content__container
   padding: 2rem
