--- a/src/app/pages/home/modules/disminucion/nueva-disminucion-masiva/nueva-disminucion-masiva.component.html
+++ b/src/app/pages/home/modules/disminucion/nueva-disminucion-masiva/nueva-disminucion-masiva.component.html
@@ -52,7 +52,7 @@
 						/>
 
 						<mat-label><img src="assets/images/arrow_circle_up-24px.svg" />Cargar usuarios</mat-label>
-						<input matInput formControlName="file" class="disabled__input" [placeholder]="fileName" required />
+						<input matInput formControlName="excelFile" class="disabled__input" [placeholder]="fileName" required />
 					</mat-form-field>
 					<br />
 					<mat-dialog-actions>
