--- a/src/app/pages/home/modules/inicio/inicio.component.html
+++ b/src/app/pages/home/modules/inicio/inicio.component.html
@@ -2,9 +2,9 @@
 	<div class="container">
 		<app-entity-header [titleInicio]="'Billetera Madre'" [totalCreditos]="total"></app-entity-header>
 	</div>
-	<div class="row">
+	<!-- <div class="row">
 		<app-grafics-inicio></app-grafics-inicio>
-	</div>
+	</div> -->
 	<div class="row table__data">
 		<app-tabla-inicio></app-tabla-inicio>
 	</div>
