--- a/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
@@ -1,39 +1,59 @@
 <div class="section__container" *ngIf="usuario">
-    <div class="image__container">
-        <img class="profile__img" src={{usuario.avatar_url}} alt="">
-    </div>
-    <div class="user__management">
-        <mat-card-title>{{ usuario.shortName }} {{ usuario.lastName }}</mat-card-title>
-        <div class="flex__user__info">
-            <div style="display: flex">
-                <mat-card-subtitle class="highlight__info">Usuario</mat-card-subtitle>
-                <mat-card-subtitle>{{ usuario.userName }}</mat-card-subtitle>
-            </div>
-            <mat-card-subtitle class="highlight__info" *ngIf="usuario.rol">{{ usuario.rol }}</mat-card-subtitle>
-        </div>
-        <br/>
-        <button mat-raised-button color="primary" class="buttons__management">
-            Activar
-        </button>
-        <button mat-stroked-button class="buttons__management" (click)="modificar( usuario.userId )">
-            Editar
-        </button>
-    </div>
-    <div class="divider"></div>
-    <div class="user__info">
-        <table>
-            <td class="table__header">
-                <tr>DNI</tr>
-                <tr>CUIL</tr>
-                <tr>Teléfono</tr>
-                <tr>E-mail</tr>
-            </td>
-            <td>
-                <tr>{{ usuario.dni }}</tr>
-                <tr>{{ usuario.cuil }}</tr>
-                <tr>{{ usuario.phoneNumber }}</tr>
-                <tr>{{ usuario.email }}</tr>
-            </td>
-        </table>
-    </div>
+	<div class="image__container">
+		<img class="profile__img" src="{{ usuario.avatar_url }}" alt="" />
+	</div>
+	<div class="user__management">
+		<mat-card-title>{{ usuario.shortName }} {{ usuario.lastName }}</mat-card-title>
+		<div class="flex__user__info">
+			<div style="display: flex">
+				<mat-card-subtitle class="highlight__info">Usuario</mat-card-subtitle>
+				<mat-card-subtitle>{{ usuario.username }}</mat-card-subtitle>
+			</div>
+			<mat-card-subtitle class="highlight__info" *ngIf="usuario.rol">{{ usuario.rol }}</mat-card-subtitle>
+		</div>
+		<br />
+		<button mat-raised-button color="primary" class="buttons__management">Activar</button>
+		<button mat-stroked-button class="buttons__management" (click)="modificar(usuario.userId)">Editar</button>
+	</div>
+	<div class="divider"></div>
+	<div class="user__info">
+		<table>
+			<td class="table__header">
+				<tr>
+					DNI
+				</tr>
+				<tr>
+					CUIL
+				</tr>
+				<tr>
+					Teléfono
+				</tr>
+				<tr>
+					E-mail
+				</tr>
+			</td>
+			<td>
+				<tr>
+					{{
+						usuario.dni
+					}}
+				</tr>
+				<tr>
+					{{
+						usuario.cuil
+					}}
+				</tr>
+				<tr>
+					{{
+						usuario.phoneNumber
+					}}
+				</tr>
+				<tr>
+					{{
+						usuario.email
+					}}
+				</tr>
+			</td>
+		</table>
+	</div>
 </div>
