--- a/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
+++ b/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
@@ -5,10 +5,10 @@
                   The actual rendered columns are set as a property on the row definition" -->
 
 			<!-- ID Column -->
-			<ng-container matColumnDef="dni">
+			<ng-container matColumnDef="customId">
 				<th mat-header-cell *matHeaderCellDef>ID/CUIL/DNI</th>
 				<td mat-cell *matCellDef="let element">
-					<span class="text__id">{{ element.dni }}</span>
+					<span class="text__id">{{ element.customId }}</span>
 				</td>
 			</ng-container>
 
