--- a/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
@@ -13,7 +13,7 @@
 		</div>
 		<br />
 		<button mat-raised-button color="primary" class="buttons__management">Activar</button>
-		<button mat-stroked-button class="buttons__management" (click)="modificar(usuario.userId)">Editar</button>
+		<button mat-stroked-button class="buttons__management" (click)="modificar(usuario._id)">Editar</button>
 	</div>
 	<div class="divider"></div>
 	<div class="user__info">
