--- a/src/app/pages/home/modules/usuarios/modificacion-usuario/modificacion-usuario.component.html
+++ b/src/app/pages/home/modules/usuarios/modificacion-usuario/modificacion-usuario.component.html
@@ -32,9 +32,7 @@
 
 				<br />
 				<mat-dialog-actions>
-					<button mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>
-						Siguiente
-					</button>
+					<button mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>Siguiente</button>
 				</mat-dialog-actions>
 			</mat-step>
 
@@ -51,7 +49,7 @@
 						<mat-label>Rol</mat-label>
 						<mat-select>
 							<mat-option *ngFor="let rol of roles" [value]="rol">
-								{{rol}}
+								{{ rol }}
 							</mat-option>
 						</mat-select>
 					</mat-form-field>
@@ -60,7 +58,7 @@
 				<div class="form__group">
 					<mat-form-field appareance="fill">
 						<mat-label>Contraseña</mat-label>
-						<input matInput placeholder="Contraseña" type="password" formControlName="pass" required />
+						<input matInput placeholder="Contraseña" type="password" formControlName="password" required />
 					</mat-form-field>
 
 					<mat-form-field appareance="fill">
@@ -71,12 +69,8 @@
 
 				<br />
 				<mat-dialog-actions>
-					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>
-						Anterior
-					</button>
-					<button mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>
-						Siguiente
-					</button>
+					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
+					<button mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>Siguiente</button>
 				</mat-dialog-actions>
 			</mat-step>
 
@@ -97,12 +91,8 @@
 
 				<br />
 				<mat-dialog-actions>
-					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>
-						Anterior
-					</button>
-					<button mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>
-						Siguiente
-					</button>
+					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
+					<button mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>Siguiente</button>
 				</mat-dialog-actions>
 			</mat-step>
 
@@ -114,94 +104,92 @@
 					<div style="float: left; width: 25%">
 						<ul>
 							<mat-card-title class="title__options">Nombre</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{myForm.get('shortName')?.value}}</mat-card-subtitle>
+							<mat-card-subtitle class="subtitle__options">{{ myForm.get('shortName')?.value }}</mat-card-subtitle>
 						</ul>
 					</div>
 					<div style="float: left; width: 25%">
 						<ul>
 							<mat-card-title class="title__options">Apellido</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{myForm.get('lastName')?.value}}</mat-card-subtitle>
+							<mat-card-subtitle class="subtitle__options">{{ myForm.get('lastName')?.value }}</mat-card-subtitle>
 						</ul>
 					</div>
 					<div style="float: left; width: 25%">
 						<ul>
 							<mat-card-title class="title__options">DNI</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{myForm.get('dni')?.value}}</mat-card-subtitle>
+							<mat-card-subtitle class="subtitle__options">{{ myForm.get('dni')?.value }}</mat-card-subtitle>
 						</ul>
 					</div>
 					<div style="float: left; width: 25%">
 						<ul>
 							<mat-card-title class="title__options">CUIL</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{myForm.get('cuil')?.value}}</mat-card-subtitle>
+							<mat-card-subtitle class="subtitle__options">{{ myForm.get('cuil')?.value }}</mat-card-subtitle>
 						</ul>
 					</div>
 				</mat-card>
 
 				<br />
-                
-                <div *ngIf="isBackoffice">
-                    <mat-card class="card_content">
-                        <div style="float: left; width: 50%">
-                            <ul>
-                                <mat-card-title class="title__options">Usuario</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('userName')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                        <div style="float: left; width: 50%">
-                            <ul>
-                                <mat-card-title class="title__options">Rol asignado</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('rol')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                    </mat-card>
-    
-                    <br />
-    
-                    <mat-card class="card_content">
-                        <div style="float: left; width: 50%">
-                            <ul>
-                                <mat-card-title class="title__options">E-mail</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('email')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                        <div style="float: left; width: 50%">
-                            <ul>
-                                <mat-card-title class="title__options">Teléfono</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('phoneNumber')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                    </mat-card>
-                    <br />
-                </div>
 
-                <div *ngIf="!isBackoffice">
-                    <mat-card class="card_content">
-                        <div style="float: left; width: 30%">
-                            <ul>
-                                <mat-card-title class="title__options">Usuario</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('userName')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                        <div style="float: left; width: 40%">
-                            <ul>
-                                <mat-card-title class="title__options">E-mail</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('email')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                        <div style="float: left; width: 30%">
-                            <ul>
-                                <mat-card-title class="title__options">Teléfono</mat-card-title>
-                                <mat-card-subtitle class="subtitle__options">{{myForm.get('phoneNumber')?.value}}</mat-card-subtitle>
-                            </ul>
-                        </div>
-                    </mat-card>
-                    <br />
-                </div>
+				<div *ngIf="isBackoffice">
+					<mat-card class="card_content">
+						<div style="float: left; width: 50%">
+							<ul>
+								<mat-card-title class="title__options">Usuario</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('userName')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+						<div style="float: left; width: 50%">
+							<ul>
+								<mat-card-title class="title__options">Rol asignado</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('rol')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+					</mat-card>
+
+					<br />
+
+					<mat-card class="card_content">
+						<div style="float: left; width: 50%">
+							<ul>
+								<mat-card-title class="title__options">E-mail</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('email')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+						<div style="float: left; width: 50%">
+							<ul>
+								<mat-card-title class="title__options">Teléfono</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('phoneNumber')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+					</mat-card>
+					<br />
+				</div>
+
+				<div *ngIf="!isBackoffice">
+					<mat-card class="card_content">
+						<div style="float: left; width: 30%">
+							<ul>
+								<mat-card-title class="title__options">Usuario</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('userName')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+						<div style="float: left; width: 40%">
+							<ul>
+								<mat-card-title class="title__options">E-mail</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('email')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+						<div style="float: left; width: 30%">
+							<ul>
+								<mat-card-title class="title__options">Teléfono</mat-card-title>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('phoneNumber')?.value }}</mat-card-subtitle>
+							</ul>
+						</div>
+					</mat-card>
+					<br />
+				</div>
 
 				<mat-dialog-actions>
-					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>
-						Anterior
-					</button>
+					<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
 					<button mat-stroked-button class="buttons__stepper__primary" matStepperNext type="button" (click)="submit()">
 						Confirmar
 					</button>
