--- a/src/app/features/tabla-masivos/tabla-masivos.component.html
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.html
@@ -15,13 +15,13 @@
 			<!-- Type Column -->
 			<ng-container matColumnDef="tipo">
 				<th mat-header-cell *matHeaderCellDef>Tipo</th>
-				<td mat-cell *matCellDef="let element">{{ element.tipo }}</td>
+				<td mat-cell *matCellDef="let element">Masivo</td>
 			</ng-container>
 
 			<!-- Concept Column -->
 			<ng-container matColumnDef="concepto">
 				<th mat-header-cell *matHeaderCellDef>Concepto</th>
-				<td mat-cell *matCellDef="let element">{{ element.concepto }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.name }}</td>
 			</ng-container>
 
 			<!-- Status Column -->
@@ -29,20 +29,20 @@
 				<th mat-header-cell *matHeaderCellDef>Estado</th>
 				<td mat-cell *matCellDef="let element">
 					<img src="../../../assets/images/tabla-masivos/icon_action_autorenew_circle_24px.svg" class="image__status" />
-					{{ element.estado }}
+					{{ element.status }}
 				</td>
 			</ng-container>
 
 			<!-- Creation Column -->
 			<ng-container matColumnDef="creacion">
 				<th mat-header-cell *matHeaderCellDef>Creación</th>
-				<td mat-cell *matCellDef="let element">{{ element.creacion }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.createdAt | date }}</td>
 			</ng-container>
 
 			<!-- Upgrade Column -->
 			<ng-container matColumnDef="actualizacion">
 				<th mat-header-cell *matHeaderCellDef>Actualización</th>
-				<td mat-cell *matCellDef="let element">{{ element.actualizacion }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.updatedAt | date }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="star" stickyEnd>
