--- a/src/app/features/tabla-masivos/tabla-masivos.component.html
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.html
@@ -48,7 +48,17 @@
 			<ng-container matColumnDef="star" stickyEnd>
 				<th mat-header-cell *matHeaderCellDef></th>
 				<td mat-cell *matCellDef="let element">
-					<mat-icon class="color__option">more_vert</mat-icon>
+					<button mat-icon-button [matMenuTriggerFor]="menu">
+						<mat-icon>more_vert</mat-icon>
+					</button>
+					<mat-menu #menu="matMenu">
+						<button mat-menu-item>
+							<span>Ver detalle</span>
+						</button>
+						<button mat-menu-item>
+							<span>Activar</span>
+						</button>
+					</mat-menu>
 				</td>
 			</ng-container>
 
