--- a/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
+++ b/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
@@ -35,14 +35,14 @@
 			<ng-container matColumnDef="star" stickyEnd>
 				<th mat-header-cell *matHeaderCellDef></th>
 				<td mat-cell *matCellDef="let element">
-					<button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+					<button mat-icon-button [matMenuTriggerFor]="menu">
 						<mat-icon>more_vert</mat-icon>
 					</button>
 					<mat-menu #menu="matMenu">
-						<button mat-menu-item (click)="verDetalle(element._id)">
+						<button mat-menu-item (click)="verDetalle(element.id)">
 							<span>Ver detalle</span>
 						</button>
-						<button mat-menu-item (click)="modificar(element._id)">
+						<button mat-menu-item (click)="modificar(element.id)">
 							<span>Editar</span>
 						</button>
 						<button mat-menu-item>
