--- a/src/assets/style-variables/variables.sass
+++ b/src/assets/style-variables/variables.sass
@@ -10,7 +10,7 @@ $grey: #959595
 $primary-purple: #9c27b030
 $purple: #430ca5
 $light-grey: #d4d4d4
-$dark-purple: #9c27b091
+$dark-purple: #841A97
 $primary-bg: rgba(132, 26, 151, 0.08)
 $light-gray: rgba(149, 149, 149, .3)
 $medium-gray: rgba(149, 149, 149, .9)
