--- a/src/app/features/tabla-masivos/tabla-masivos.component.html
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.html
@@ -12,12 +12,6 @@
 				</td>
 			</ng-container>
 
-			<!-- Type Column -->
-			<ng-container matColumnDef="tipo">
-				<th mat-header-cell *matHeaderCellDef>Tipo</th>
-				<td mat-cell *matCellDef="let element">Masivo</td>
-			</ng-container>
-
 			<!-- Concept Column -->
 			<ng-container matColumnDef="concepto">
 				<th mat-header-cell *matHeaderCellDef>Concepto</th>
@@ -56,7 +50,10 @@
 							<span>Ver detalle</span>
 						</button>
 						<button mat-menu-item>
-							<span>Activar</span>
+							<span>Procesar</span>
+						</button>
+						<button mat-menu-item>
+							<span>Cancelar</span>
 						</button>
 					</mat-menu>
 				</td>
