--- a/src/app/pages/home/components/header/header.component.sass
+++ b/src/app/pages/home/components/header/header.component.sass
@@ -1,7 +1,7 @@
 @import ../../../../../assets/style-variables/variables
 
 .header__container
-  padding: 35px 20px 15px 20px
+  padding: 15px 20px 15px 20px
   display: flex
   align-items: center
   justify-content: space-between
@@ -29,6 +29,7 @@ img
   text-align: right
 .account__btn
   background-color: $light-gray
+  box-shadow: none
 .account__icon
   color: $medium-gray
 .noti
