--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,9 +14,13 @@
 			<div
 				class="nav__item"
 				mat-list-item
-				routerLink="/home/{{ nav.route }}"
+				routerLink="{{nav.route}}"
 				routerLinkActive="active"
+				[routerLinkActiveOptions]="{exact : true}"
 				*ngFor="let nav of navItems"
+				[matTooltipDisabled]="nav.soon"
+				matTooltip="Proximamente"
+				matTooltipPosition="right"
 				[ngClass]="nav.disabled == true ? 'disabled' : ''"
 			>
 				<mat-icon class="material-icons-outlined">{{ nav.icon }}</mat-icon>
