--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
@@ -6,17 +6,17 @@
 				<ng-template matStepLabel>Denominación</ng-template>
 				<br />
 				<div class="form__group">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Nombre completo</mat-label>
 						<input matInput type="text" placeholder="Nombre completo" formControlName="description" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Acrónimo</mat-label>
 						<input matInput type="text" placeholder="Acrónimo" formControlName="shortName" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Sigla</mat-label>
 						<input matInput type="text" placeholder="Sigla" formControlName="symbol" required />
 					</mat-form-field>
@@ -33,12 +33,12 @@
 				<ng-template matStepLabel>Valor y vigencia</ng-template>
 				<br />
 				<div class="form__group" style="width: 60%">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Cantidad a emitir</mat-label>
 						<input matInput type="number" placeholder="Cantidad a emitir" formControlName="initialAmount" required />
 					</mat-form-field>
 
-					<mat-form-field appearance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Vigencia desde - hasta</mat-label>
 						<mat-date-range-input [rangePicker]="picker">
 							<input matStartDate placeholder="Desde" formControlName="validFrom" />
@@ -53,7 +53,7 @@
 					</mat-checkbox>
 				</div>
 
-				<mat-form-field style="width: 60%" appearance="fill">
+				<mat-form-field style="width: 60%" appearance="outline">
 					<mat-label>Observaciones...</mat-label>
 					<textarea
 						matInput
@@ -76,7 +76,7 @@
 			<mat-step [stepControl]="myForm">
 				<ng-template matStepLabel>Aplicabilidad</ng-template>
 				<br />
-				<mat-form-field style="width: 60%" appearance="fill">
+				<mat-form-field style="width: 60%" appearance="outline">
 					<mat-label>Aplicabilidad</mat-label>
 					<mat-chip-list #chipList formControlName="applicabilities">
 						<mat-chip
