--- a/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.html
@@ -38,7 +38,7 @@
 						<input matInput type="number" placeholder="Cantidad a emitir" formControlName="initialAmount" required />
 					</mat-form-field>
 
-					<mat-form-field appearance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Vigencia desde - hasta</mat-label>
 						<mat-date-range-input [rangePicker]="picker">
 							<input matStartDate placeholder="Desde" formControlName="validFrom" />
@@ -53,7 +53,7 @@
 					</mat-checkbox>
 				</div>
 
-				<mat-form-field style="width: 60%" appearance="fill">
+				<mat-form-field style="width: 60%" appearance="outline">
 					<mat-label>Observaciones...</mat-label>
 					<textarea
 						matInput
@@ -76,7 +76,7 @@
 			<mat-step [stepControl]="myForm">
 				<ng-template matStepLabel>Aplicabilidad</ng-template>
 				<br />
-				<mat-form-field style="width: 60%" appearance="fill">
+				<mat-form-field style="width: 60%" appearance="outline">
 					<mat-label>Aplicabilidad</mat-label>
 					<mat-chip-list #chipList formControlName="applicabilities">
 						<mat-chip
