general fixes integratio/UI

--- a/src/app/features/modal-nueva-operacion-disminucion/modal-nueva-operacion-disminucion.component.sass
+++ b/src/app/features/modal-nueva-operacion-disminucion/modal-nueva-operacion-disminucion.component.sass
@@ -11,17 +11,21 @@
 .button__increments
     width: 100%
     text-align: inherit
+    position: relative
+    height: 48px
 .buttons__modal
     width: 45%
+    height: 42px
 .btn_close
-    cursor: pointer    
+    cursor: pointer
 .tabActivate
-    mat-icon
+    .mat-icon
         color: $primary
 .tabActivate
     color: $primary
     background-color: $primary-bg
 .check
+    margin-top: 5px
     display: block
     margin-left: auto
 .tabActivate
@@ -31,4 +35,6 @@
     display: none
     position: absolute
     top: 6px
-    right: 16px  
+    right: 16px
+.mat-dialog-actions
+    justify-content: space-around
