--- a/src/app/features/tabla-masivos/tabla-masivos.component.sass
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.sass
@@ -3,7 +3,8 @@
 .section__subtable
     background-color: white
     margin-top: 5vh
-    padding: 30px 30px 30px 30px
+    padding: 30px 30px 30px 
+    overflow: hidden
 table
     width: 100%
 .paginator
