--- a/src/app/pages/home/components/header/header.component.sass
+++ b/src/app/pages/home/components/header/header.component.sass
@@ -28,11 +28,17 @@ img
   margin-right: 1rem
   text-align: right
 .account__btn
+  height: 40px
+  width: 40px
   background-color: $light-gray
   box-shadow: none
 .account__icon
+  height: 40px
+  width: 40px
+  border-radius: 50%
   color: $medium-gray
 .noti
+  cursor: pointer
   margin-right: 1.5rem
   color: $medium-gray
 .logout
