--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
@@ -10,12 +10,6 @@
 .buttons__stepper
     margin-right: 12px
     color: $light-grey
-.card_content
-    display: flex
-    flex-wrap: wrap
-    width: 60%
-    box-shadow: 1px 1px $purple
-    background-color: $primary-purple
 .form__group
     display: flex
 .form__group>.mat-form-field
@@ -32,6 +26,7 @@
     resize: none
 .detail__options
     font-size: small
+    transform: translate(10px, -10px)
 .button__cancel
     margin-left: -11px
     margin-top: -6px    
