--- a/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.sass
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.sass
@@ -3,7 +3,7 @@
 .section__stepper
     background-color: white
     margin-top: 5vh
-    padding: 30px 30px 30px 30px
+    padding: 20px
 .buttons__stepper__primary
     border-color: $primary
     color: $primary
@@ -11,13 +11,14 @@
     margin-right: 12px
     color: $light-grey
 .card_content
-    min-height: 100px
+    height: 100px
     width: 70%
-    box-shadow: 1px 1px $purple
+    border: 1px solid $primary
     background-color: $primary-purple
 .title__options
-    font-size: initial
-    color: $dark-purple
+    font-size: 15px
+    font-weight: 400
+    color: $primary
 .subtitle__options
     font-size: large
     color: $primary
@@ -32,3 +33,14 @@
     width: 200px
     transform: translate(-12px, -27px)
     cursor: pointer
+.file__input__label
+    height: 60px
+    float: left
+    transform: translateY(-5px)
+    img
+        height: 20px
+        transform: translateY(3px)
+
+    
+
+
