--- a/src/app/pages/home/modules/usuarios/alta-usuarios/alta-usuarios.component.html
+++ b/src/app/pages/home/modules/usuarios/alta-usuarios/alta-usuarios.component.html
@@ -7,24 +7,24 @@
 				<ng-template matStepLabel>Datos personales</ng-template>
 				<br />
 				<div class="form__group">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Nombre</mat-label>
 						<input matInput type="text" placeholder="Nombre" formControlName="shortName" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Apellido</mat-label>
 						<input matInput type="text" placeholder="Apellido" formControlName="lastName" required />
 					</mat-form-field>
 				</div>
 
 				<div class="form__group">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>DNI</mat-label>
 						<input matInput type="number" placeholder="DNI" formControlName="dni" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>CUIL</mat-label>
 						<input matInput type="number" placeholder="CUIL" formControlName="cuil" required />
 					</mat-form-field>
@@ -40,12 +40,12 @@
 				<ng-template matStepLabel>Credenciales</ng-template>
 				<br />
 				<div class="form__group">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Usuario</mat-label>
 						<input matInput type="text" placeholder="Usuario" formControlName="username" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill" *ngIf="isBackoffice">
+					<mat-form-field appareance="outline" *ngIf="isBackoffice">
 						<mat-label>Rol</mat-label>
 						<mat-select formControlName="rol">
 							<mat-option *ngFor="let rol of roles" [value]="rol">
@@ -56,12 +56,12 @@
 				</div>
 
 				<div class="form__group">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Contraseña</mat-label>
 						<input matInput placeholder="Contraseña" type="password" formControlName="password" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Repetir contraseña</mat-label>
 						<input matInput placeholder="Repetir contraseña" type="password" formControlName="repeat_pass" required />
 					</mat-form-field>
@@ -78,12 +78,12 @@
 				<ng-template matStepLabel>Datos de contacto</ng-template>
 				<br />
 				<div class="form__group">
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>E-mail</mat-label>
 						<input matInput placeholder="E-mail" formControlName="email" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="fill">
+					<mat-form-field appearance="outline">
 						<mat-label>Teléfono</mat-label>
 						<input matInput placeholder="Teléfono" formControlName="phoneNumber" required />
 					</mat-form-field>
