--- a/src/app/pages/home/modules/usuarios/data-usuarios/data-usuarios.component.html
+++ b/src/app/pages/home/modules/usuarios/data-usuarios/data-usuarios.component.html
@@ -6,7 +6,7 @@
 				<app-tabla-usuarios-finales [usuarios]="usuariosFinales"></app-tabla-usuarios-finales>
 			</ng-container>
 		</mat-tab>
-		<mat-tab label="Back Office">
+		<mat-tab label="Back Office" [disabled]="true">
 			<ng-container *ngIf="!isLoading">
 				<app-tabla-usuarios-backoffice [usuarios]="usuariosBackoffice"></app-tabla-usuarios-backoffice>
 			</ng-container>
