--- a/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.sass
+++ b/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.sass
@@ -10,7 +10,8 @@
     background-color: #ffffff
 
 .image__container
-    width: 20%
+    width: 15%
+    text-align: center
 .profile__img
     width: 10em
     height: 10em
