--- a/src/app/features/entity-header/entity-header.component.sass
+++ b/src/app/features/entity-header/entity-header.component.sass
@@ -15,7 +15,7 @@ p, h2
 .left__site
     display: flex
     align-items: center
-    padding: 19px
+    padding: 20px
 .typecredit
     font-size: 40px
     font-weight: 500
@@ -24,10 +24,13 @@ p, h2
     display: flex
     align-items: center
     padding-bottom: 11px
+    justify-content: flex-end
+    margin-right: 29px
 .balance
     font-size: 40px
     font-weight: 500
-    text-align: right
+    padding-right: 10px
 .text
+    font-weight: 500
     font-size: 14px
     padding-left: 7px
