--- a/src/app/features/modal-nueva-operacion-incremento/modal-nueva-operacion.component.sass
+++ b/src/app/features/modal-nueva-operacion-incremento/modal-nueva-operacion.component.sass
@@ -12,8 +12,10 @@
     width: 100%
     text-align: inherit
     position: relative
+    height: 48px
 .buttons__modal
     width: 45%
+    height: 42px
 .btn_close
     cursor: pointer
 .tabActivate
@@ -23,6 +25,7 @@
     color: $primary
     background-color: $primary-bg
 .check
+    margin-top: 5px
     display: block
     margin-left: auto
 .tabActivate
@@ -33,3 +36,5 @@
     position: absolute
     top: 6px
     right: 16px
+.mat-dialog-actions
+    justify-content: space-around
