--- a/src/app/features/modal-reemision-activo/modal-reemision-activo.component.html
+++ b/src/app/features/modal-reemision-activo/modal-reemision-activo.component.html
@@ -7,12 +7,12 @@
 			<h2 class="title">Reemitir activo</h2>
 		</div>
 		<form class="input__margin" [formGroup]="myForm">
-            <mat-form-field appareance="fill" style="width: 20%;" class="input__margin">
+            <mat-form-field appearance="outline" style="width: 20%;" class="input__margin">
                 <mat-label>Activo</mat-label>
                 <input matInput formControlName="symbol">
             </mat-form-field>
             
-            <mat-form-field appareance="fill" style="width: 70%;" class="input__margin">
+            <mat-form-field appearance="outline" style="width: 70%;" class="input__margin">
                 <mat-label>Cantidad a reemitir</mat-label>
                 <input matInput type="number" formControlName="amount" required>
             </mat-form-field>
