--- a/src/app/features/tabla-masivos/tabla-masivos.component.html
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.html
@@ -46,13 +46,13 @@
 						<mat-icon>more_vert</mat-icon>
 					</button>
 					<mat-menu #menu="matMenu">
-						<button mat-menu-item>
+						<button mat-menu-item disabled>
 							<span>Ver detalle</span>
 						</button>
-						<button mat-menu-item>
+						<button mat-menu-item disabled>
 							<span>Procesar</span>
 						</button>
-						<button mat-menu-item>
+						<button mat-menu-item disabled>
 							<span>Cancelar</span>
 						</button>
 					</mat-menu>
