--- a/src/app/pages/home/components/header/header.component.html
+++ b/src/app/pages/home/components/header/header.component.html
@@ -8,10 +8,11 @@
 	<div class="header__rigth">
 		<div class="usuario__container">
 			<div class="usuario__nombre">
-				<p>Hola Adolfo Zuazo!</p>
-				<p>Cargo usuario</p>
+				<p>Hola {{userData.user.shortName}} {{userData.user.lastName}}!</p>
+				<p>{{userData.user.username}}</p>
 			</div>
-			<button mat-mini-fab class="account__btn">
+			<img *ngIf="userData.user.avatarUrl" class="material-icons account__icon" [src]="userData.user.avatarUrl" alt="">
+			<button *ngIf="!userData.user.avatarUrl" mat-mini-fab class="account__btn">
 				<mat-icon class="material-icons account__icon">account_circle</mat-icon>
 			</button>
 		</div>
