--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
@@ -6,17 +6,17 @@
 				<ng-template matStepLabel>Denominación</ng-template>
 				<br />
 				<div class="form__group">
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" style="width: 28%">
 						<mat-label>Nombre completo</mat-label>
 						<input matInput type="text" placeholder="Nombre completo" formControlName="description" required />
 					</mat-form-field>
 
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" style="width: 20%">
 						<mat-label>Acrónimo</mat-label>
 						<input matInput type="text" placeholder="Acrónimo" formControlName="shortName" required />
 					</mat-form-field>
 
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" style="width: 10%">
 						<mat-label>Sigla</mat-label>
 						<input matInput type="text" placeholder="Sigla" formControlName="symbol" required />
 					</mat-form-field>
@@ -48,7 +48,7 @@
 						<mat-date-range-picker #picker></mat-date-range-picker>
 					</mat-form-field>
 
-					<mat-checkbox color="primary" style="margin-top: 25px" formControlName="transferable">
+					<mat-checkbox color="primary" style="margin: 25px 10px" formControlName="transferable">
 						Transferible
 					</mat-checkbox>
 				</div>
