--- a/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.sass
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.sass
@@ -3,7 +3,7 @@
 .section__stepper
     background-color: white
     margin-top: 5vh
-    padding: 30px 30px 30px 30px
+    padding: 20px
 .buttons__stepper__primary
     border-color: $primary
     color: $primary
@@ -13,11 +13,12 @@
 .card_content
     height: 100px
     width: 70%
-    box-shadow: 1px 1px $purple
+    border: 1px solid $primary
     background-color: $primary-purple
 .title__options
-    font-size: initial
-    color: $dark-purple
+    font-size: 15px
+    font-weight: 400
+    color: $primary
 .subtitle__options
     font-size: large
     color: $primary
