--- a/src/styles.sass
+++ b/src/styles.sass
@@ -16,5 +16,14 @@ html, body
 .section__sub-title
   color: $title
   font-weight: 400  
-
   
+.mat-paginator-page-size
+  visibility: hidden
+.card_content
+    display: flex
+    flex-wrap: wrap
+    width: 70%
+    border: 1px solid $purple
+    background-color: $primary-purple
+.mat-elevation-z8 
+  box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 10%), 0px 2px 2px 1px rgb(0 0 0 / 10%), 0px 2px 2px 2px rgb(0 0 0 / 5%)
