--- a/src/app/features/tabla-activos/tabla-activos.component.html
+++ b/src/app/features/tabla-activos/tabla-activos.component.html
@@ -61,8 +61,11 @@
 								<span> Reemitir </span>
 							</button>
 						</div>
-						<button mat-menu-item (click)="activarActivo(element)">
+						<button mat-menu-item (click)="activarActivo(element)" *ngIf="element.status === 'INACTIVE'">
 							<span>Activar</span>
+						</button>
+						<button mat-menu-item (click)="desactivarActivo(element)" *ngIf="element.status === 'ACTIVE'">
+							<span>Desactivar</span>
 						</button>
 					</mat-menu>
 				</td>
