--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,6 +27,7 @@
 				<p class="title">{{ nav.name }}</p>
 			</div>
 		</mat-nav-list>
+		<span class="legend">POWERED BY INTERCONOMY</span>
 	</mat-sidenav>
 
 	<mat-sidenav-content class="content__container">
