--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -4,6 +4,7 @@
   height: 100vh
 .nav__items__container
   margin-top: 1.5rem
+  height: 90%
 .sidenav
   width: 260px
   box-shadow: 3px 0px 4px -1px rgba(0,0,0,0.3)
@@ -15,7 +16,7 @@
   align-items: center
   padding: 15px 25px
   transition: all .2s
-  color: $grey
+  color: $grey  
   &:hover
     color: $dark-purple
     background-color: rgba($primary, .5 )
@@ -42,3 +43,7 @@
   margin-right: 20px
 .content__container
   padding: 2rem
+.legend
+  color: #ababab
+  font-size: 12px
+  margin: 25px
