--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
@@ -4,6 +4,12 @@
     background-color: white
     margin-top: 5vh
     padding: 30px 30px 30px 30px
+.card_content
+    display: flex
+    flex-wrap: wrap
+    width: 70%
+    border: 1px solid $purple
+    background-color: $primary-purple
 .buttons__stepper__primary
     border-color: $primary
     color: $primary
