inc-dec-masivos-dis

--- a/src/app/features/modal-nueva-operacion-disminucion/modal-nueva-operacion-disminucion.component.html
+++ b/src/app/features/modal-nueva-operacion-disminucion/modal-nueva-operacion-disminucion.component.html
@@ -21,6 +21,7 @@
 			<mat-dialog-actions class="increments">
 				<button
 					mat-button
+					disabled
 					class="button__increments spacing button_colors"
 					(click)="diferentColor($event, 2)"
 					[ngClass]="{ tabActivate: cambioColor === 'tab2' }"
